--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
     "dev": "nodemon ./config/server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "express-flash": "^0.0.2",
-    "passport": "^0.7.0",
-    "pg": "^8.12.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
+    "express": "^4.19.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
     "pg-promise": "^11.5.5",
     "uuid": "^9.0.1"
   }
