--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
+    "connect-pg-simple": "^9.0.1",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -22,6 +24,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
     "pg-promise": "^11.5.5",
+    "redis": "^4.6.15",
     "uuid": "^9.0.1"
   }
 }
